fix offer restore

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
     <div class="span3">
         <select ng-model="car.model"
                 ng-options="model as model.name for model in selModelList"
-                ng-change="resetPackaging()"
+                ng-change="resetPack()"
                 >
         </select>
     </div>
