--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
                     </div>
                 </li>
             </ul>
-            <a href="" class="arrow-prev" ng-click="carUpgrade.left()" ng-show="carUpgrade.isLeft()"></a>
-            <a href="" class="arrow-next" ng-click="carUpgrade.right()" ng-show="carUpgrade.isRight()"></a>
+            <!--<a href="" class="arrow-prev" ng-click="carUpgrade.left()" ng-show="carUpgrade.isLeft()"></a>
+            <a href="" class="arrow-next" ng-click="carUpgrade.right()" ng-show="carUpgrade.isRight()"></a>-->
         </section>
 
 
@@ -121,8 +121,8 @@
                 </li>
 
             </ul>
-            <a href="" class="arrow-prev" ng-click="serviceUpgrade.left()" ng-show="serviceUpgrade.isLeft()"></a>
-            <a href="" class="arrow-next" ng-click="serviceUpgrade.right()" ng-show="serviceUpgrade.isRight()"></a>
+            <!--<a href="" class="arrow-prev" ng-click="serviceUpgrade.left()" ng-show="serviceUpgrade.isLeft()"></a>
+            <a href="" class="arrow-next" ng-click="serviceUpgrade.right()" ng-show="serviceUpgrade.isRight()"></a>-->
         </section>
 
 
@@ -427,8 +427,13 @@
 <section class="credit-choose">
     <h2>Кредит</h2>
 
+    <div class="client-options">
+        <a class="radio-btn  ng-class: {'active': parameters.clientRCI}" ng-click="parameters.clientRCI=!parameters.clientRCI">Клиент RCI</a>
+        <a class="radio-btn  ng-class: {'active': parameters.existCRM}" ng-click="parameters.existCRM=!parameters.existCRM">Есть в CRM</a>
+    </div>
+
     <section class="credit-filter filter row-fluid">
-        <div class="span4 input-ip">
+        <div class="span6 input-ip">
             <label>Первоначальный взнос — {{ parameters.initialPaymentPercent }} %</label>
 
             <div class="input"><input ng-model="parameters.initialPayment"><label> руб.</label></div>
@@ -437,7 +442,7 @@
         </div>
 
 
-        <div class="span4 input-ip">
+        <div class="span6 input-ip">
             <label>Ежемесячный платеж</label>
 
             <div class="input"><input class="input-mini" ng-model="parameters.monthPaymentFilter"><label>руб.</label></div>
@@ -445,26 +450,14 @@
 
         </div>
 
-        <div class="span4">
-            <div class="client-options">
-                <a class="radio-btn  ng-class: {'active': parameters.clientRCI}" ng-click="parameters.clientRCI=!parameters.clientRCI">Клиент RCI</a>
-                <a class="radio-btn  ng-class: {'active': parameters.existCRM}" ng-click="parameters.existCRM=!parameters.existCRM">Есть в CRM</a>
-            </div>
 
-            <div class="input-ip">
-                <label>Остаточный платеж</label>
-
-                <div class="input"><input ng-model="parameters.lastPayment"><label>руб.</label></div>
-                <div slider ng-model="parameters.lastPayment" min="0" max="200000" step="1000"></div>
-            </div>
-        </div>
     </section>
 
     <section class="credit-filter filter row-fluid">
         <div class="span4  input-ip">
             <label>Оценка текущей машины</label>
 
-            <div class="input"><input ng-model="parameters.tradeIn" min="5000" max="200000" step="1000"><label>руб.</label></div>
+            <div class="input"><input ng-model="parameters.tradeIn" min="0" max="2000000" step="1000"><label>руб.</label></div>
             <div slider ng-model="parameters.tradeIn"></div>
         </div>
 
@@ -473,9 +466,19 @@
             <label>Рефинансирование</label>
 
             <div class="input"><input ng-model="parameters.refinance"><label>руб.</label></div>
-            <div slider ng-model="parameters.refinance" min="5000" max="200000" step="1000"></div>
+            <div slider ng-model="parameters.refinance" min="0" max="2000000" step="1000"></div>
         </div>
 
+        <div class="span4">
+
+
+            <div class="input-ip">
+                <label>Остаточный платеж</label>
+
+                <div class="input"><input ng-model="parameters.lastPayment"><label>руб.</label></div>
+                <div slider ng-model="parameters.lastPayment" min="0" max="2000000" step="1000"></div>
+            </div>
+        </div>
 
     </section>
 
