--- a/index.html
+++ b/index.html
@@ -445,13 +445,13 @@
     </div>
 
 
-    <section class="credit-filter filter row-fluid">
+    <section class="credit-filter filter row-fluid" ng-show="car.pack">
         <div class="span6 input-ip">
-            <label>Первоначальный взнос — {{ parameters.initialPaymentPercent }} %</label>
+            <label>Первоначальный взнос — {{ initialPaymentPercent }} %</label>
 
             <div class="input"><input ng-model="parameters.initialPayment"><label> руб.</label></div>
-            <div slider ng-model="parameters.initialPaymentPercent" max="100" min="0" step="1"
-                 tooltip="{{ parameters.initialPaymentPercent }} %"></div>
+            <div slider ng-model="parameters.initialPayment" max="car.pack.price" min="0" step="1000"
+                 tooltip="{{ initialPaymentPercent }} %"></div>
 
         </div>
 
