--- a/index.html
+++ b/index.html
@@ -519,98 +519,95 @@
 
 </section>
 
-<div class="noprint price-line-container">
-    <div class="price-line noprint" id="offerPrice">
-        <h3>Ежемесячный платеж: {{ calculation.offer.carMonthPayment }} + {{ calculation.offer.serviceMonthPayment
-            }}
-            = </h3>
-
-        <div class="price">{{ calculation.offer.monthPayment }} руб/мес</div>
-    </div>
-</div>
 
 <div ng-controller="OfferCtrl" ng-show="calculation.offer">
     <section class="noprint services-choose">
         <h2>Дополнительные сервисы</h2>
 
-        <!--    <div class="show-month-price"><label class="checkbox"><input type="checkbox" checked>Показывать стоимость за
-                месяц</label></div>-->
+
+        <table>
+            <!--<tr>
+                <th>Сервис</th>
+                <th>Тип сервиса</th>
+                <th class="text-right">Стоимость</th>
+                <th class="text-right">Скидка</th>
+                <th class="text-right"></th>
+
+            </tr>-->
+            <tr>
+                <td>Осаго</td>
+                <td>
+                    <select name="" id="">
+                        <option value="" selected>На 1 год</option>
+                        <option value="">На 2 года</option>
+                        <option value="">На 3 года</option>
+                    </select>
+
+                </td>
+                <td class="text-right">4 799 руб.</td>
+                <td class="text-right sale">—2201 руб.</td>
+                <td class="text-right">399,91 руб/мес.</td>
 
 
-        <section class="service-list row-fluid">
-            <div class="span6">
-                <ul>
-                    <li class="header">ОСАГО<span class="price">1 230 руб</span></li>
-                    <li>
-                        <label class="radio"><input type="radio" name="r1"/>Без ОСАГО
-                            <span class="price">-1230 руб</span>
-                        </label>
-                    </li>
-                    <li>
-                        <label class="radio"><input type="radio" checked name="r1"/>ОСАГО простое
-                            <span class="price"></span>
-                        </label>
-                    </li>
-                </ul>
-            </div>
+            </tr>
+            <tr>
+                <td>Расширенная страховка</td>
+                <td>
+                    <select name="" id="">
+                        <option value="">На 1 год</option>
+                        <option value="" selected>На 2 года</option>
+                        <option value="">На 3 года</option>
+                    </select>
 
-            <div class="span6">
-                <ul>
-                    <li class="header">ОСАГО<span class="price">1 230 руб</span></li>
-                    <li>
-                        <label class="radio"><input type="radio" name="r2"/>Без ОСАГО
-                            <span class="price">-1230 руб</span>
-                        </label>
-                    </li>
-                    <li>
-                        <label class="radio"><input type="radio" name="r2"/>Без ОСАГО
-                            <span class="price">-1230 руб</span>
-                        </label>
-                    </li>
-                    <li>
-                        <label class="radio"><input type="radio" name="r2"/>Без ОСАГО
-                            <span class="price">-1230 руб</span>
-                        </label>
-                    </li>
-                    <li>
-                        <label class="radio"><input type="radio" name="r2"/>Без ОСАГО
-                            <span class="price">-1230 руб</span>
-                        </label>
-                    </li>
-                    <li>
-                        <label class="radio"><input type="radio" name="r2"/>Без ОСАГО
-                            <span class="price">-1230 руб</span>
-                        </label>
-                    </li>
-                    <li>
-                        <label class="radio"><input type="radio" checked name="r2"/>ОСАГО простое
-                            <span class="price"></span>
-                        </label>
-                    </li>
-                </ul>
-            </div>
-
-            <div class="span6">
-                <ul>
-                    <li class="header">ОСАГО<span class="price">1 230 руб</span></li>
-                    <li>
-                        <label class="radio"><input type="radio" name="r3"/>Без ОСАГО
-                            <span class="price">-1230 руб</span>
-                        </label>
-                    </li>
-                    <li>
-                        <label class="radio"><input type="radio" checked name="r3"/>ОСАГО простое
-                            <span class="price"></span>
-                        </label>
-                    </li>
-                </ul>
-            </div>
+                </td>
+                <td class="text-right">18 000 руб.</td>
+                <td class="text-right sale"></td>
+                <td class="text-right">750 руб/мес.</td>
 
 
-        </section>
+            </tr>
+            <tr>
+                <td>Осаго</td>
+                <td>
+                    <select name="" id="">
+                        <option value="" selected>На 1 год</option>
+                        <option value="">На 2 года</option>
+                        <option value="">На 3 года</option>
+                    </select>
+
+                </td>
+                <td class="text-right">4 799 руб.</td>
+                <td class="text-right sale">—1000 руб.</td>
+                <td class="text-right">399,91 руб/мес.</td>
+
+
+            </tr>
+
+            <tr>
+                <td></td>
+                <td class="text-right">Итого</td>
+                <td class="text-right">20 132 руб.</td>
+                <td></td>
+                <td class="text-right">3 399,91 руб/мес.</td>
+
+
+            </tr>
+        </table>
+
 
 
     </section>
+
+
+    <div class="noprint price-line-container">
+        <div class="price-line noprint" id="offerPrice">
+            <h3>Ежемесячный платеж: {{ calculation.offer.carMonthPayment }} + {{ calculation.offer.serviceMonthPayment
+                }}
+                = </h3>
+
+            <div class="price">{{ calculation.offer.monthPayment }} руб/мес</div>
+        </div>
+    </div>
 
 
     <section class="end-offer">
