- при сворачивании группы «Ежемесячный платеж» в саммари из-за длины строки дергается все саммари
- по таблице доп. Сервисов не понятно что какой столбец значит, сумма должна вводится ручками.

--- a/index.html
+++ b/index.html
@@ -530,14 +530,14 @@
 
 
         <table>
-            <!--<tr>
+            <tr>
                 <th>Сервис</th>
                 <th>Тип сервиса</th>
                 <th class="text-right">Стоимость</th>
                 <th class="text-right">Скидка</th>
-                <th class="text-right"></th>
+                <th class="text-right">Платеж</th>
 
-            </tr>-->
+            </tr>
             <tr>
                 <td>Осаго</td>
                 <td>
@@ -548,7 +548,7 @@
                     </select>
 
                 </td>
-                <td class="text-right">4 799 руб.</td>
+                <td class="text-right"><input value="4 799" type=""/>  руб.</td>
                 <td class="text-right sale">—2201 руб.</td>
                 <td class="text-right">399,91 руб/мес.</td>
 
@@ -564,7 +564,7 @@
                     </select>
 
                 </td>
-                <td class="text-right">18 000 руб.</td>
+                <td class="text-right"><input value="18 000" type=""/> руб.</td>
                 <td class="text-right sale"></td>
                 <td class="text-right">750 руб/мес.</td>
 
@@ -574,15 +574,15 @@
                 <td>Осаго</td>
                 <td>
                     <select name="" id="">
-                        <option value="" selected>На 1 год</option>
+                        <option value="" selected>Нет</option>
                         <option value="">На 2 года</option>
                         <option value="">На 3 года</option>
                     </select>
 
                 </td>
-                <td class="text-right">4 799 руб.</td>
-                <td class="text-right sale">—1000 руб.</td>
-                <td class="text-right">399,91 руб/мес.</td>
+                <td class="text-right">—</td>
+                <td class="text-right sale"></td>
+                <td class="text-right">—</td>
 
 
             </tr>
